# Pydantic

./: pyproject.toml  sample_pydantic.py
examples/: example1.py  validation_error.py  validation_success.py
