[tool.poetry]
name = "pydantic_sample"
version = "0.0.0"
description = "pydantic learning"
authors = ["Navya <navyaaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
sqlalchemy = {extras = ["asyncio"], version = "^1.4.41"}
alembic = "^1.8.1"
pydantic = "^1.10.2"
asyncpg = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
